Made generic method to store notifications (#1098)
* made generic method to store notifications

* used correct method

---------

Co-authored-by: Andrei Trushkov <andrei.trushkov@hmcts.net>
Co-authored-by: NickHill111 <47982351+nickhill111@users.noreply.github.com>